--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,23 @@
-body
+body *
 {
     font-family: inter;
-    /* background-color: #e8ead3; */
 }
 
 
 .header_div{
-    background-color: #e4efe7;
+    background-color: #f3f4ed;
     border-radius: 5px;
 }
 
 .header_text
 {
     text-align: center;
-    font-size: 25px;
+    font-size: 15px;
+    font-weight:500;
     padding: 10px;
+}
+.header_text b{
+    font-size: 25px;
 }
 
 .header_image
@@ -38,13 +41,13 @@ li, ul{
     position: absolute;
     bottom: 8px;
     display: block;
-    background-color: #e4efe7;
+    background-color: #f3f4ed;
     border-radius: 5px;
 }
 .footer_table
 {
     
-    background-color: #e4efe7;
+    background-color: #f3f4ed;
     border-radius: 5px;
     
 }
@@ -69,4 +72,17 @@ li, ul{
     padding: 0px;
     text-decoration: none;
     color: black;
+}
+.blue_link
+{
+    padding: 5px;
+	color:white;
+    font-size: 25px;
+	background-color: rgb(173, 30, 255);
+	font-weight: 500;
+    text-decoration: none;
+    border-radius: 3px;
+}
+.links_table a{
+    margin: 15px;
 }
