--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,7 @@ li, ul{
 {
     margin-top: 50px;
     width: 99%;
-    position:relative;
-    bottom: 8px;
+    position:absolute;
     display: block;
     background-color: #f3f4ed;
     border-radius: 5px;
