--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,17 @@ li, ul{
     text-decoration: none;
     border-radius: 3px;
 }
+
+.blue_link:hover{
+    padding: 10px;
+	color:white;
+    font-size: 25px;
+    background-color: rgb(173, 30, 255);
+	font-weight: 500;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
 .links_table a{
     margin: 15px;
 }
